# one-time-secrets

./: README.md  pyproject.toml
src/app/: main.py
src/app/repository/: secrets.py
src/app/routers/: router.py
src/app/schemas/: schemas.py
