[project]
name = "one-time-secrets"
version = "0.1.0"
description = ""
authors = [
    {name = "SergeyGrishencko",email = "grisenchen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
